# healthintel-app

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/appeals/: page.tsx
app/appeals/[id]/: page.tsx
app/dashboard/: page.tsx
app/intake/: page.tsx
app/login/: page.tsx
app/member/: page.tsx
app/member/status/: page.tsx
app/member/status/[trackingId]/: page.tsx
app/member/submit/: page.tsx
app/policies/: page.tsx
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1
backend/src/healthintel_api/: __init__.py  main.py
backend/src/healthintel_api/api/: dependencies.py  routes.py
backend/src/healthintel_api/core/: config.py
backend/src/healthintel_api/data/: __init__.py  seed.py
backend/src/healthintel_api/domain/: models.py
backend/src/healthintel_api/repositories/: appeals.py
backend/src/healthintel_api/services/: appeals.py  documents.py  email.py  llm_extraction.py
backend/tests/: test_api.py
components/: healthintel-workspace.tsx  member-appeal-portal.tsx
lib/: api.ts  cases.ts
sample-data/: README.md  generate_large_sample_pdf.py
