[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthintel-api"
version = "0.1.0"
description = "Python backend API for the HealthIntel appeals prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pypdf>=5.0,<7.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pydantic>=2.7,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/healthintel_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
